--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -91,7 +91,11 @@
         <dispatcher>ERROR</dispatcher>
     </filter-mapping>
     <error-page>
+        <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+        <location>/WEB-INF/error-pages/expired.xhtml</location>
+    </error-page>   
+    <error-page>
         <exception-type>java.lang.Throwable</exception-type>
-        <location>/</location>
+        <location>/index.xhtml</location>
     </error-page>   
 </web-app>
