reverted to jdk 17. removed parent pom. upgraded to jakartaee10.

--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <jakartaee>10.0.0</jakartaee>
-        <java.version>19</java.version>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
     
     <dependencies>
@@ -98,6 +98,7 @@
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>12.0.0</version>
+			<classifier>jakarta</classifier>
         </dependency>
         <!--809kb-->
 <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
@@ -151,7 +152,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
 				<configuration>
-                <release>19</release>
+                <release>17</release>
             </configuration>
             </plugin>
             <plugin>
