--- a/pom.xml
+++ b/pom.xml
@@ -27,18 +27,6 @@
             <version>2.1.1</version>
             <type>jar</type>
         </dependency>
-        <dependency>
-            <groupId>jakarta.faces</groupId>
-            <artifactId>jakarta.faces-api</artifactId>
-            <version>4.0.1</version>
-            <type>jar</type>
-        </dependency>
-		<!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.faces -->
-		<dependency>
-			<groupId>org.glassfish</groupId>
-			<artifactId>jakarta.faces</artifactId>
-			<version>4.0.0</version>
-		</dependency>
         <!-- https://mvnrepository.com/artifact/org.eclipse.parsson/parsson -->
         <dependency>
             <groupId>org.eclipse.parsson</groupId>
@@ -51,10 +39,16 @@
             <version>2.0.0</version>
         </dependency>
         <dependency>
-            <!--jsoup HTML parser library @ https://jsoup.org/--> 
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.15.3</version>
+            <groupId>jakarta.faces</groupId>
+            <artifactId>jakarta.faces-api</artifactId>
+            <version>4.0.1</version>
+            <type>jar</type>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.faces -->
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.faces</artifactId>
+            <version>4.0.0</version>
         </dependency>
         <dependency>
             <groupId>io.mikael</groupId>
@@ -89,7 +83,7 @@
             <version>1.0</version>
         </dependency>
         <dependency>
-            <groupId>net.clementlevallois.importers</groupId>
+            <groupId>net.clementlevallois.io</groupId>
             <artifactId>model</artifactId>
             <version>1.0</version>
         </dependency>
@@ -98,15 +92,15 @@
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>12.0.0</version>
-			<classifier>jakarta</classifier>
+            <classifier>jakarta</classifier>
         </dependency>
         <!--809kb-->
-<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
-		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.4</version>
-		</dependency>
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+<!--        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>-->
         <dependency>
             <groupId>org.omnifaces</groupId>
             <artifactId>omnifaces</artifactId>
@@ -117,11 +111,6 @@
             <groupId>au.com.flyingkite</groupId>
             <artifactId>mobiledetect</artifactId>
             <version>1.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.monitorjbl</groupId>
-            <artifactId>xlsx-streamer</artifactId>
-            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
@@ -136,7 +125,7 @@
             <type>jar</type>
         </dependency>
     </dependencies>
-        <build>
+    <build>
         <resources>
             <resource>
                 <directory>src/main/java</directory>
@@ -151,9 +140,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
-				<configuration>
-                <release>17</release>
-            </configuration>
+                <configuration>
+                    <release>17</release>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -190,12 +179,4 @@
             </plugin>
         </plugins>
     </build>
-    <!--    <repositories>
-        <repository>  
-            <id>prime-repo</id>  
-            <name>PrimeFaces Maven Repository</name>  
-            <url>http://repository.primefaces.org</url>  
-            <layout>default</layout>
-        </repository>
-    </repositories>-->
 </project>
