fixed a probable error in the web.xml which caused an View Expired Exception in the logs

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -71,7 +71,7 @@
     
     <error-page>
         <exception-type>jakarta.faces.application.ViewExpiredException</exception-type>
-        <location>/WEB-INF/error-pages/expired.xhtml</location>
+        <location>/WEB-INF/error-pages/expired.html</location>
     </error-page>   
     <error-page>
         <exception-type>java.lang.Throwable</exception-type>
