finished removing the bws function

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -68,10 +68,18 @@
         <param-name>primefaces.MOVE_SCRIPTS_TO_BOTTOM</param-name>
         <param-value>true</param-value>
     </context-param>
-    
+  
     <error-page>
         <exception-type>jakarta.faces.application.ViewExpiredException</exception-type>
-        <location>/WEB-INF/error-pages/expired.html</location>
+        <location>/error-pages/expired.html</location>
+    </error-page>   
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error-pages/404.html</location>
+    </error-page>   
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error-pages/500.html</location>
     </error-page>   
     <error-page>
         <exception-type>java.lang.Throwable</exception-type>
