--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,19 @@
         <dependency>
             <groupId>jakarta.json.bind</groupId>
             <artifactId>jakarta.json.bind-api</artifactId>
-            <version>2.0.0</version>
+            <version>3.0.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.eclipse.parsson/parsson -->
         <dependency>
             <groupId>org.eclipse.parsson</groupId>
             <artifactId>parsson</artifactId>
             <version>1.1.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>yasson</artifactId>
+            <version>3.0.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -49,7 +55,7 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.faces</artifactId>
-            <version>4.0.0</version>
+            <version>4.0.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -57,11 +63,6 @@
             <artifactId>urlbuilder</artifactId>
             <version>2.0.9</version>
             <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>twitter-api-java-sdk</artifactId>
-            <version>2.0.3</version>
         </dependency>
         <dependency>
             <groupId>net.clementlevallois.functions</groupId>
@@ -93,25 +94,19 @@
         <dependency>
             <groupId>org.omnifaces</groupId>
             <artifactId>omnifaces</artifactId>
-            <version>4.0</version>
-        </dependency>
-        <!--8kb-->
-        <dependency>
-            <groupId>au.com.flyingkite</groupId>
-            <artifactId>mobiledetect</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>3.8.0</version>
-            <type>jar</type>
+            <version>4.0.1</version>
         </dependency>
         <dependency>
             <groupId>jakarta.platform</groupId>
             <artifactId>jakarta.jakartaee-api</artifactId>
             <version>${jakartaee}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>twitter-api-java-sdk</artifactId>
+            <version>2.0.3</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <build>
@@ -139,11 +134,6 @@
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.3.0</version>
             </plugin>
         </plugins>
     </build>
