--- a/.mvn/maven.config
+++ b/.mvn/maven.config
@@ -1,1 +1,6 @@
--T 1C -DskipTests -Dparallel=all -DperCoreThreadCount=false -DthreadCount=16
+-T
+1C
+-DskipTests
+-Dparallel=all
+-DperCoreThreadCount=false
+-DthreadCount=16
