continued to improve the handling of urls. Added tests on that aspect. First tests for nocodefunctions!

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,14 @@
             <version>${jakartaee}</version>
             <scope>provided</scope>
         </dependency>
+        <!--for tests-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        
     </dependencies>
     <build>
         <plugins>
