--- a/pom.xml
+++ b/pom.xml
@@ -11,45 +11,20 @@
     <name>Nocode functions - web front</name>
     
     <properties>
-        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
         <jakartaee>10.0.0</jakartaee>
         <java.version>17</java.version>
+        <!--the two following properties are useful to NetBeans to detect correct and incorrect java languagage features in the code-->
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
     
     <dependencies>
         <dependency>
-            <groupId>jakarta.json</groupId>
-            <artifactId>jakarta.json-api</artifactId>
-            <version>2.1.2</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.json.bind</groupId>
-            <artifactId>jakarta.json.bind-api</artifactId>
-            <version>3.0.0</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.eclipse.parsson/parsson -->
-        <dependency>
-            <groupId>org.eclipse.parsson</groupId>
-            <artifactId>parsson</artifactId>
-            <version>1.1.4</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse</groupId>
-            <artifactId>yasson</artifactId>
-            <version>3.0.3</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
             <groupId>jakarta.faces</groupId>
             <artifactId>jakarta.faces-api</artifactId>
             <version>4.0.1</version>
-            <type>jar</type>
+            <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.faces -->
         <dependency>
@@ -62,7 +37,6 @@
             <groupId>io.mikael</groupId>
             <artifactId>urlbuilder</artifactId>
             <version>2.0.9</version>
-            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>net.clementlevallois.functions</groupId>
@@ -103,18 +77,9 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-        
     </dependencies>
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <release>${java.version}</release>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
