--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,15 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>Nocode functions - web front</name>
+    <name>nocodefunctions-web-app</name>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jakartaee>10.0.0</jakartaee>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <!--the two following properties are useful to NetBeans to detect correct and incorrect java languagage features in the code-->
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
     
     <dependencies>
