--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,10 @@
         <param-name>primefaces.UPLOADER</param-name>	
         <param-value>auto</param-value>
     </context-param>
+    <context-param>
+        <param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
+        <param-value>true</param-value>
+    </context-param>
     <mime-mapping>
         <extension>ttf</extension>
         <mime-type>application/font-ttf</mime-type>
